# tiktokenx

./: .gitignore  Cargo.toml  LICENSE  README.md  _typos.toml  clippy.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: encoding_benchmark.rs
scripts/: cleanup.sh  fair_benchmark.py
src/: core.rs  encodings.rs  errors.rs  lib.rs  models.rs  vendors.rs  vocab.rs
